<resources>
    <string name="app_name">AGDQScheduleNotifier</string>
    <string name="main_activity_name">SGDQ 2018</string>
    <string name="search">Search</string>
    <string name="only_show_subscribed">Filter subscribed</string>
    <string name="twitch">Twitch stream</string>
    <string name="test">When 25 days\t\tLength 45 mins\n
    Runners\t\t gymnast86\n
    Casters\t\t musical_dardevil</string>
    <string name="notification_bell">Notification Bell</string>
    <string name="runners">Runners</string>
    <string name="casters">Casters</string>
    <string name="expand_icon_button">Expand Icon Button</string>
    <string name="replace_events">Replace</string>
    <string name="add_events">Add</string>
    <string name="file_info">File info</string>
    <string name="edit">Edit events</string>
    <string name="notification_channel_name">GDQ Notifications</string>
    <string name="notification_channel_description">Used to notify you when an event you want to watch is about to start</string>
</resources>
