<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/app_bar_twitch"
        android:icon="@drawable/glitch_icon_white_128px"
        android:title="@string/twitch"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_subscribed"
        android:checkable="true"
        android:title="@string/only_show_subscribed"
        app:showAsAction="never" />
    <item android:title="@string/edit">
        <menu>
            <item
                android:id="@+id/app_bar_add_events"
                android:title="@string/add_events"
                app:showAsAction="never" />
            <item
                android:id="@+id/app_bar_replace_events"
                android:title="@string/replace_events"
                app:showAsAction="never" />
            <item
                android:id="@+id/app_bar_file_format_info"
                android:title="@string/file_info"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>